--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/shapes/
+    - assets/pokemons.json
+    - assets/types.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
