--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
     - assets/images/shapes/
     - assets/pokemons.json
     - assets/types.json
+    - assets/material-image/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
