--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   percent_indicator: ^3.0.1
   favorite_button: ^0.0.4
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.2
 
 dev_dependencies:
   flutter_test:
