--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,16 @@ dependencies:
   hive_generator: ^1.1.1
   build_runner: ^2.1.2
   google_fonts: ^2.1.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icon:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
